Search char realisation

--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -13,6 +13,17 @@
    &__item {
       transition: 0.3s transform;
 
+      &-enter {
+         opacity: 0;
+         transform: translateX(-50px)
+      }
+
+      &-enter-active {
+         opacity: 1;
+         transform: translateX(0px);
+         transition: all 400ms ease-in;
+      }
+
       &-img {
          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
          width: 225px;
